force-app/main/default/objects/Form_Builder__WorkFlowLog__c/fields/Form_Builder__Action__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Condition</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>