force-app/main/default/objects/Form_Builder__WorkFlowLog__c/fields/Form_Builder__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>