force-app/main/default/objects/Form_Builder__WorkFlowLog__c/fields/Form_Builder__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>