force-app/main/default/objects/Form_Builder__WorkFlowLog__c/fields/Form_Builder__Meta__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Meta__c</fullName>
    <label>Meta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>