force-app/main/default/objects/Form_Builder__WorkFlowLog__c/fields/Form_Builder__Node_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Node_ID__c</fullName>
    <label>Node ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>