force-app/main/default/objects/Form_Builder__WorkFlowLog__c/fields/Form_Builder__Related_Person_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Related_Person_Object_Type__c</fullName>
    <label>Related Person Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>