force-app/main/default/objects/Form_Builder__WorkFlowLog__c/fields/Form_Builder__Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Email Viewed</fullName>
            </value>
            <value>
                <fullName>Email Action Clicked</fullName>
            </value>
            <value>
                <fullName>Summary Viewed</fullName>
            </value>
            <value>
                <fullName>Action Sent</fullName>
            </value>
            <value>
                <fullName>Action Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>